# parrot

./: .gitignore  LICENSE.md  README.md  setup.rc
snap/: snapcraft.yaml
snap/hooks/: configure  install
src/: CMakeLists.txt  bedge-4420-hack  client.c  client.h  comm.c  comm.h  config.c  config.h  debug.c  debug.h  fail.c  fail.h  main.c  server.c  server.h  setserial.c
tools/: snapcraft  version
